--- a/package.json
+++ b/package.json
@@ -3,10 +3,24 @@
   "version": "1.0.0",
   "description": "Frontend for banka project built with React",
   "main": "index.js",
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|svg|cass|scss|less|css)$": "<rootDir>/__mocks__/fileMock.js"
+    },
+    "collectCoverage": true,
+    "setupFilesAfterEnv": [
+      "<rootDir>/__tests__/setupTest.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/setupTest.js"
+    ]
+  },
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "lint": "eslint src -c .eslintrc.js --ext js,jsx"
   },
   "repository": {
@@ -31,6 +45,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.0.0",
@@ -38,6 +54,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "jest-config": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
     "prettier": "^1.18.2",
     "style-loader": "^0.23.1",
