--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.3",
+    "redux-thunk": "^2.3.0"
   }
 }
