--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/__tests__/setupTest.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/utils/",
+      "<rootDir>/src/redux/index.js"
     ]
   },
   "scripts": {
@@ -62,13 +66,18 @@
     "jest": "^24.8.0",
     "jest-config": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "moxios": "^0.4.0",
     "prettier": "^1.18.2",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "axios": "^0.19.0",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
